--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                 <a href="#">Bakery</a>
               </li>
               <li>
-                <a class="link-fruit" href="fruits/fruit.html"
+                <a class="link-fruit" href="fruits/fruit.html" style="color: red;"
                   >Fruit and vegetables</a
                 >
               </li>
