--- a/fruits/fruit.html
+++ b/fruits/fruit.html
@@ -64,7 +64,7 @@
           </div>
           <div class="header__middle middle">
             <a href="../index.html" class="middle__image">
-              <img src="image/logo.svg" alt="" />
+              <img src="image/logo.svg" alt="logo" />
             </a>
             <form action="#" method="#" class="search-form">
               <div class="select__wrapper">
@@ -84,10 +84,10 @@
             </form>
             <div class="header__user user">
               <a href="#" class="user__profile">
-                <img src="image/header/user.svg" alt="" />
+                <img src="image/header/user.svg" alt="user" />
               </a>
               <div class="user__basket">
-                <img src="image/header/basket.svg" alt="" />
+                <img src="image/header/basket.svg" alt="basket" />
                 <p class="basket__amount">0</p>
               </div>
 
@@ -403,11 +403,11 @@
                   />
                   <span class="checkbox__fake"></span>
                   <label for="rating-1" class="discr">
-                    <img src="image/star.svg" alt="" />
-                    <img src="image/star.svg" alt="" />
-                    <img src="image/star.svg" alt="" />
-                    <img src="image/star.svg" alt="" />
-                    <img src="image/star.svg" alt="" />
+                    <img src="image/star.svg" alt="star" />
+                    <img src="image/star.svg" alt="star" />
+                    <img src="image/star.svg" alt="star" />
+                    <img src="image/star.svg" alt="star" />
+                    <img src="image/star.svg" alt="star" />
                   </label>
                 </div>
                 <div class="brands-item">
@@ -420,10 +420,10 @@
                   />
                   <span class="checkbox__fake"></span>
                   <label for="rating-2" class="discr">
-                    <img src="image/star.svg" alt="" />
-                    <img src="image/star.svg" alt="" />
-                    <img src="image/star.svg" alt="" />
-                    <img src="image/star.svg" alt="" />
+                    <img src="image/star.svg" alt="star" />
+                    <img src="image/star.svg" alt="star" />
+                    <img src="image/star.svg" alt="star" />
+                    <img src="image/star.svg" alt="star" />
                   </label>
                 </div>
                 <div class="brands-item">
@@ -436,9 +436,9 @@
                   />
                   <span class="checkbox__fake"></span>
                   <label for="rating-3" class="discr">
-                    <img src="image/star.svg" alt="" />
-                    <img src="image/star.svg" alt="" />
-                    <img src="image/star.svg" alt="" />
+                    <img src="image/star.svg" alt="star" />
+                    <img src="image/star.svg" alt="star" />
+                    <img src="image/star.svg" alt="star" />
                   </label>
                 </div>
                 <div class="brands-item">
@@ -451,8 +451,8 @@
                   />
                   <span class="checkbox__fake"></span>
                   <label for="rating-4" class="discr">
-                    <img src="image/star.svg" alt="" />
-                    <img src="image/star.svg" alt="" />
+                    <img src="image/star.svg" alt="star" />
+                    <img src="image/star.svg" alt="star" />
                   </label>
                 </div>
                 <div class="brands-item">
@@ -465,7 +465,7 @@
                   />
                   <span class="checkbox__fake"></span>
                   <label for="rating-5" class="discr">
-                    <img src="image/star.svg" alt="" />
+                    <img src="image/star.svg" alt="star" />
                   </label>
                 </div>
               </div>
@@ -511,7 +511,7 @@
                     <a href="#" class="best__image"
                       ><img
                         src="../image/best/card.png"
-                        alt=""
+                        alt="card"
                         class="best__image"
                     /></a>
                     <span class="discount">- 36 %</span>
@@ -536,7 +536,7 @@
                     <a href="#" class="best__image"
                       ><img
                         src="../image/best/card.png"
-                        alt=""
+                        alt="card"
                         class="best__image"
                     /></a>
                     <span class="discount">- 36 %</span>
@@ -561,7 +561,7 @@
                     <a href="#" class="best__image"
                       ><img
                         src="../image/best/card.png"
-                        alt=""
+                        alt="card"
                         class="best__image"
                     /></a>
                     <span class="discount">- 36 %</span>
@@ -586,7 +586,7 @@
                     <a href="#" class="best__image"
                       ><img
                         src="../image/best/card.png"
-                        alt=""
+                        alt="card"
                         class="best__image"
                     /></a>
                     <span class="discount">- 36 %</span>
@@ -613,7 +613,7 @@
                 <div class="line-content">
                   <article class="line-item">
                     <div class="line-image">
-                      <img src="../image/blog/dinner.png" alt="" />
+                      <img src="../image/blog/dinner.png" alt="card" />
                     </div>
                     <div class="line__body">
                       <div class="line-left">
@@ -657,7 +657,7 @@
                   </article>
                   <article class="line-item">
                     <div class="line-image">
-                      <img src="../image/blog/dinner.png" alt="" />
+                      <img src="../image/blog/dinner.png" alt="dinner" />
                     </div>
                     <div class="line__body">
                       <div class="line-left">
@@ -701,7 +701,7 @@
                   </article>
                   <article class="line-item">
                     <div class="line-image">
-                      <img src="../image/blog/dinner.png" alt="" />
+                      <img src="../image/blog/dinner.png" alt="dinner" />
                     </div>
                     <div class="line__body">
                       <div class="line-left">
@@ -745,7 +745,7 @@
                   </article>
                   <article class="line-item">
                     <div class="line-image">
-                      <img src="../image/blog/dinner.png" alt="" />
+                      <img src="../image/blog/dinner.png" alt="dinner" />
                     </div>
                     <div class="line__body">
                       <div class="line-left">
@@ -789,7 +789,7 @@
                   </article>
                   <article class="line-item">
                     <div class="line-image">
-                      <img src="../image/blog/dinner.png" alt="" />
+                      <img src="../image/blog/dinner.png" alt="dinner" />
                     </div>
                     <div class="line__body">
                       <div class="line-left">
