--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
           </div>
           <div class="header__middle middle">
             <a href="../index.html" class="middle__image">
-              <img src="image/logo.svg" alt="" />
+              <img src="image/logo.svg" alt="logo" />
             </a>
             <form action="#" method="#" class="search-form">
               <div class="select__wrapper">
@@ -86,10 +86,10 @@
             </form>
             <div class="header__user user">
               <a href="#" class="user__profile">
-                <img src="image/header/user.svg" alt="" />
+                <img src="image/header/user.svg" alt="user" />
               </a>
               <div class="user__basket">
-                <img src="image/header/basket.svg" alt="" />
+                <img src="image/header/basket.svg" alt="basket" />
                 <p class="basket__amount">0</p>
               </div>
 
@@ -835,7 +835,7 @@
               </div>
             </div>
             <div class="content__vegetables">
-              <img src="image/best/card.png" alt="" />
+              <img src="image/best/card.png" alt="card" />
               <div class="vegetables__text">
                 <p class="vegetables__tips">Vegetable</p>
                 <h4 class="vegetables__title">
