--- a/fruits/fruit.html
+++ b/fruits/fruit.html
@@ -105,7 +105,7 @@
                       <button class="continue close-modal">
                         Continue shopping
                       </button>
-                      <button class="Checkout">Go to Checkout</button>
+                      <a href="#" class="Checkout">Go to Checkout</a>
                     </div>
                   </div>
                 </div>
@@ -113,7 +113,7 @@
             </div>
           </div>
         </div>
-        <section class="chapters">
+        <div class="chapters">
           <div class="container">
             <ul class="chapter__list">
               <li>
@@ -147,9 +147,21 @@
               </li>
             </ul>
           </div>
-        </section>
+        </div>
       </header>
       <main>
+        <div class="breadcrumbs">
+          <div class="container">
+            <ul class="breadcrumbs__list">
+              <li title="main page">
+                <a href="../index.html">Homepage</a>
+              </li>
+              <li>
+                <a>Fruit and vegetables</a>
+              </li>
+            </ul>
+          </div>
+        </div>
         <div class="top-body container">
           <h2>Fruit and vegetables</h2>
           <div class="how-view">
