--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                       <button class="continue close-modal">
                         Continue shopping
                       </button>
-                      <button class="Checkout">Go to Checkout</button>
+                      <a href="#" class="Checkout">Go to Checkout</a>
                     </div>
                   </div>
                 </div>
@@ -115,7 +115,7 @@
             </div>
           </div>
         </div>
-        <section class="chapters">
+        <div class="chapters">
           <div class="container">
             <ul class="chapter__list">
               <li>
@@ -146,7 +146,7 @@
               </li>
             </ul>
           </div>
-        </section>
+        </div>
       </header>
       <main>
         <!--------------------------------------------------------------------->
