--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             </a>
             <form action="#" method="#" class="search-form">
               <div class="select__wrapper">
-                <select name="categories" id="" class="form-select">
+                <select name="categories" id="categories" class="form-select">
                   <option value="All">All categories</option>
                   <option value="gagaga">gagaga</option>
                   <option value="tatatat">tatatat</option>
