--- a/chechout/checkout.html
+++ b/chechout/checkout.html
@@ -159,9 +159,7 @@
             </ul>
           </div>
         </div>
-
-
-
+    <!---------------------------------------------------------------------------------------------------->
         <div class="checkout__body">
           <div class="container">
           <form method="get" class="checkout__form">
@@ -212,7 +210,7 @@
                   </div>
                 </div>
               </div>
-              <!--------------------------------------------------------------------->
+     <!---------------------------------------------------------------------------------------------------->
               <div class="billing-method method">
                 <div class="section-head">
                   <h2 class="section-title">Billing method<span>Please enter your payment method</span></h2>
@@ -237,6 +235,7 @@
                     </div>
                   </div>
               </div>
+      <!---------------------------------------------------------------------------------------------------->
               <div class="payment">
                 <div class="section-head">
                   <h2 class="section-title">Payment method<span>Please enter your payment method</span></h2>
@@ -332,13 +331,49 @@
                     </div>
                   </div>
               </div>
+       <!---------------------------------------------------------------------------------------------------->
+              <div class="additional-info">
+                <div class="section-head">
+                  <h2 class="section-title">Additional informations<span>Need something else? We will make it for you!</span></h2>
+                  <p>Step 4 of 5</p>
+                </div>
+                <div class="additional-info__body general-inputs">
+                  <label for="additional-info-area">Order notes</label>
+                  <textarea name="additional-info-area" id="additional-info-area"  rows="5" placeholder="Need a specific delivery day? Sending a gitf? Let’s say ..."></textarea>
+                </div>
+              </div>
+       <!---------------------------------------------------------------------------------------------------->
+              <div class="confirmation">
+                <div class="section-head">
+                  <h2 class="section-title">Confirmation<span>We are getting to the end. Just few clicks and your order si ready!</span></h2>
+                  <p>Step 5 of 5</p>
+                </div>
+                <div class="confirmation__body">
+                  <div class="confirmation-checkbox">
+                    <input id="newsletter" type="checkbox">
+                    <label for="newsletter">I agree with sending an Marketing and newsletter emails. No spam, promissed!</label>
+                  </div>
+                  <div class="confirmation-checkbox">
+                    <input id="conditions" type="checkbox">
+                    <label for="conditions">I agree with our terms and conditions and privacy policy.</label>
+                  </div>
+                </div>
+              </div>
+              <button type="submit" class="form-button best__button">Complete order</button>
+              <div class="secure">
+                <h5>All your data are safe</h5>
+                <p>We are using the most advanced security to provide you the best experience ever.</p>
+              </div>
           </form>
-
           <aside class="order">wefwef</aside>
         </div>
         </div>
        </main>
-       <footer></footer>
+       <footer>
+        <div class="container">
+          <p>Copyright © 2020 Freshnesecom</p>
+        </div>
+       </footer>
    </div>
    <script src="script/checkout.js"></script>
    <script src="script/basket.js"></script>
