--- a/fruits/fruit.html
+++ b/fruits/fruit.html
@@ -105,7 +105,7 @@
                       <button class="continue close-modal">
                         Continue shopping
                       </button>
-                      <a href="#" class="Checkout">Go to Checkout</a>
+                      <a href="../chechout/checkout.html" class="Checkout">Go to Checkout</a>
                     </div>
                   </div>
                 </div>
@@ -121,8 +121,6 @@
               </li>
               <li>
                 <a
-                  class="link-fruit"
-                  href="fruits/fruit.html"
                   style="color: red"
                   >Fruit and vegetables</a
                 >
@@ -544,6 +542,7 @@
                       <button class="best__button">Buy now</button>
                     </div>
                   </article>
+                  
                   <article class="best__article" data-id="id-2">
                     <a href="#" class="best__image"
                       ><img
@@ -859,7 +858,7 @@
             </ul>
           </div>
           <button class="best__button">Show more products</button>
-          <p class="more__amount"><span>336</span>Products</p>
+          <p class="more__amount"><span>0</span>Products</p>
         </div>
       </main>
       <footer>
