--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
             </nav>
           </div>
           <div class="header__middle middle">
-            <a href="../index.html" class="middle__image">
-              <img src="image/logo.svg" alt="logo" />
+            <a class="middle__image">
+              <img src="image/logo.svg" alt="logo"/>
             </a>
             <form action="#" method="#" class="search-form">
               <div class="select__wrapper">
@@ -107,7 +107,7 @@
                       <button class="continue close-modal">
                         Continue shopping
                       </button>
-                      <a href="#" class="Checkout">Go to Checkout</a>
+                      <a href="chechout/checkout.html" class="Checkout">Go to Checkout</a>
                     </div>
                   </div>
                 </div>
