almost last-commit

--- a/chechout/checkout.html
+++ b/chechout/checkout.html
@@ -499,7 +499,146 @@
                 </p>
               </div>
             </form>
-            <aside class="order">wefwef</aside>
+            <aside class="aside-order">
+              <h3 class="aside-order__title">Order Summary</h3>
+              <p>Price can change depending on shipping method and taxes of your state.</p>
+              <article class="modal-card" data-id="">
+                <div class="card__left">
+                   <img src="image/card.png" alt="image">
+                   <div class="card__what-todo">
+                      <div class="card__item item-wish">Wishlist</div>
+                      <div class="card__item item-compare">Compare</div>
+                      <div class="card__item item-remove">Remove</div>
+                   </div>
+                </div>
+                <div class="card__right">
+                   <div class="card__text">
+                      <h4 class="best__title">Product title</h4>
+                      <div class="card__info">
+                         <p class="card__farm"><span>Farm:</span>Tharamis Farm</p>
+                         <p class="card__farm"><span>Freshness:</span>1 day old</p>
+                      </div>
+                   </div>
+                   <div class="rating" data-total-value="0">
+                      <div class="rating__item" data-item-value="5">★</div>
+                      <div class="rating__item" data-item-value="4">★</div>
+                      <div class="rating__item" data-item-value="3">★</div>
+                      <div class="rating__item" data-item-value="2">★</div>
+                      <div class="rating__item" data-item-value="1">★</div>
+                   </div>
+                   <div class="bottom">
+                      <p class="best__number card__price">36.99 USD</p>
+                      <div class="card__pcs">
+                         <div class="pcs__count">1 Pcs</div>
+                         <select name="Pcs" id="">
+                            <option value="Pcs">Pcs</option>
+                            <option value="Pcs">1</option>
+                            <option value="Pcs">2</option>
+                         </select>
+                      </div>
+                   </div>
+                </div>
+             </article>
+              <article class="modal-card" data-id="">
+                <div class="card__left">
+                   <img src="image/card.png" alt="image">
+                   <div class="card__what-todo">
+                      <div class="card__item item-wish">Wishlist</div>
+                      <div class="card__item item-compare">Compare</div>
+                      <div class="card__item item-remove">Remove</div>
+                   </div>
+                </div>
+                <div class="card__right">
+                   <div class="card__text">
+                      <h4 class="best__title">Product title</h4>
+                      <div class="card__info">
+                         <p class="card__farm"><span>Farm:</span>Tharamis Farm</p>
+                         <p class="card__farm"><span>Freshness:</span>1 day old</p>
+                      </div>
+                   </div>
+                   <div class="rating" data-total-value="0">
+                      <div class="rating__item" data-item-value="5">★</div>
+                      <div class="rating__item" data-item-value="4">★</div>
+                      <div class="rating__item" data-item-value="3">★</div>
+                      <div class="rating__item" data-item-value="2">★</div>
+                      <div class="rating__item" data-item-value="1">★</div>
+                   </div>
+                   <div class="bottom">
+                      <p class="best__number card__price">36.99 USD</p>
+                      <div class="card__pcs">
+                         <div class="pcs__count">1 Pcs</div>
+                         <select name="Pcs" id="">
+                            <option value="Pcs">Pcs</option>
+                            <option value="Pcs">1</option>
+                            <option value="Pcs">2</option>
+                         </select>
+                      </div>
+                   </div>
+                </div>
+             </article>
+              <article class="modal-card" data-id="">
+                <div class="card__left">
+                   <img src="image/card.png" alt="image">
+                   <div class="card__what-todo">
+                      <div class="card__item item-wish">Wishlist</div>
+                      <div class="card__item item-compare">Compare</div>
+                      <div class="card__item item-remove">Remove</div>
+                   </div>
+                </div>
+                <div class="card__right">
+                   <div class="card__text">
+                      <h4 class="best__title">Product title</h4>
+                      <div class="card__info">
+                         <p class="card__farm"><span>Farm:</span>Tharamis Farm</p>
+                         <p class="card__farm"><span>Freshness:</span>1 day old</p>
+                      </div>
+                   </div>
+                   <div class="rating" data-total-value="0">
+                      <div class="rating__item" data-item-value="5">★</div>
+                      <div class="rating__item" data-item-value="4">★</div>
+                      <div class="rating__item" data-item-value="3">★</div>
+                      <div class="rating__item" data-item-value="2">★</div>
+                      <div class="rating__item" data-item-value="1">★</div>
+                   </div>
+                   <div class="bottom">
+                      <p class="best__number card__price">36.99 USD</p>
+                      <div class="card__pcs">
+                         <div class="pcs__count">1 Pcs</div>
+                         <select name="Pcs" id="">
+                            <option value="Pcs">Pcs</option>
+                            <option value="Pcs">1</option>
+                            <option value="Pcs">2</option>
+                         </select>
+                      </div>
+                   </div>
+                </div>
+             </article>
+             <div class="aside-order__bottom">
+              <table class="bottom-total__price">
+                <tr>
+                  <td>Subtotal</td>
+                  <td>73.98 USD</td>
+                </tr>
+                <tr>
+                  <td>Tax</td>
+                  <td>17% 16.53 USD</td>
+                </tr>
+                <tr>
+                  <td>Shipping</td>
+                  <td>0 USD</td>
+                </tr>
+              </table>
+              <form class="promo-form" action="#" method="#">
+                <label for="promo"></label>
+                <input id="promo" type="text" placeholder="Apply promo code">
+                <button type="button">Apply now</button>
+              </form>
+              <div class="total-order">
+                <p>Total Order<span>Guaranteed delivery day:  June 12, 2020</span></p>
+                <p class="full-price">89.84 USD</p>
+              </div>
+             </div>
+            </aside>
           </div>
         </div>
       </main>
